; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/osx/dos/extr_33479.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/osx/dos/extr_33479.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__const.main.number = private unnamed_addr constant [18 x i8] c"0.1111111111...11\00", align 16
@.str = private unnamed_addr constant [13 x i8] c"grams = %lf\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  %2 = alloca [18 x i8], align 16
  %3 = alloca i8*, align 8
  %4 = alloca double, align 8
  store i32 0, i32* %1, align 4
  %5 = bitcast [18 x i8]* %2 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %5, i8* align 16 getelementptr inbounds ([18 x i8], [18 x i8]* @__const.main.number, i32 0, i32 0), i64 18, i1 false)
  %6 = getelementptr inbounds [18 x i8], [18 x i8]* %2, i64 0, i64 0
  %7 = call double @strtod(i8* %6, i8** %3)
  store double %7, double* %4, align 8
  %8 = load double, double* %4, align 8
  %9 = call i32 @printf(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), double %8)
  ret i32 0
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local double @strtod(i8*, i8**) #2

declare dso_local i32 @printf(i8*, double) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
